Added basic component

--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -75,6 +75,12 @@
 </div>
 <!-- Event:end -->
 
+<!-- Components:start -->
+<div id="components-demo">
+    <button-counter></button-counter>
+</div>
+<!-- Components:end -->
+
 <script src="https://cdn.jsdelivr.net/npm/axios@0.12.0/dist/axios.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/lodash@4.13.1/lodash.min.js"></script>
 <script src="main.js"></script>
