Added and tested multiple instance of button

--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -78,6 +78,8 @@
 <!-- Components:start -->
 <div id="components-demo">
     <button-counter></button-counter>
+    <button-counter></button-counter>
+    <button-counter></button-counter>
 </div>
 <!-- Components:end -->
 
